# coarsening_pass

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
opencl_tools/: CMakeLists.txt
opencl_tools/bench_support/: CMakeLists.txt
opencl_tools/bench_support/include/: bench_support.h
opencl_tools/bench_support/src/: bench_support.cpp
opencl_tools/function_overload/: CMakeLists.txt
opencl_tools/function_overload/include/: Utils.h
opencl_tools/function_overload/src/: AxtorWrapper.cpp  OCLWrapper.cpp  Utils.cpp
opencl_tools/opencl_wrapper/: CMakeLists.txt  README.md
opencl_tools/opencl_wrapper/include/: Buffer.h  Context.h  Device.h  Event.h  FileUtils.h  Kernel.h  Platform.h  Program.h  Queue.h  Utils.h
opencl_tools/opencl_wrapper/lib/: Buffer.cpp  Context.cpp  Device.cpp  Event.cpp  FileUtils.cpp  Kernel.cpp  Platform.cpp  Program.cpp  Queue.cpp  Utils.cpp
tests/: CMakeLists.txt  runTests.py
tests/divRegion/: CMakeLists.txt
tests/divRegion/kernels/: divRegion.cl
tests/divRegion/src/: main.cpp
tests/memcpy/: CMakeLists.txt
tests/memcpy/kernels/: memcpy.cl
tests/memcpy/src/: main.cpp
tests/memset/: CMakeLists.txt
tests/memset/kernels/: memset.cl
tests/memset/src/: main.cpp
tests/mm/: CMakeLists.txt
tests/mm/kernels/: mm.cl
tests/mm/src/: main.cpp
tests/mt/: CMakeLists.txt
tests/mt/include/: SystemConfiguration.h.cmake
tests/mt/kernels/: mt.cl
tests/mt/src/: main.cpp
tests/mv/: CMakeLists.txt
tests/mv/kernels/: mv.cl
tests/mv/src/: main.cpp
tests/polybench/: CMakeLists.txt
tests/polybench/OpenCL/: CMakeLists.txt
tests/polybench/OpenCL/2DCONV/: 2DConvolution.cpp
tests/polybench/OpenCL/2MM/: 2mm.cpp
tests/polybench/OpenCL/3DCONV/: 3DConvolution.cl  3DConvolution.cpp
tests/polybench/OpenCL/3MM/: 3mm.cpp
tests/polybench/OpenCL/ATAX/: atax.cl  atax.cpp
tests/polybench/OpenCL/BICG/: bicg.cpp
tests/polybench/OpenCL/CORR/: correlation.cl  correlation.cpp
tests/polybench/OpenCL/COVAR/: covariance.cpp
tests/polybench/OpenCL/FDTD-2D/: fdtd2d.cpp
tests/polybench/OpenCL/GEMM/: CMakeLists.txt  gemm.cpp
tests/polybench/OpenCL/GESUMMV/: gesummv.cpp
tests/polybench/OpenCL/GRAMSCHM/: gramschmidt.cl  gramschmidt.cpp
tests/polybench/OpenCL/MVT/: mvt.cl  mvt.cpp
tests/polybench/OpenCL/SYR2K/: syr2k.cpp
tests/polybench/OpenCL/SYRK/: syrk.cpp
tests/polybench/common/include/: MathUtils.h  PolybenchUtils.h  SystemConfig.h.cmake
tests/polybench/common/src/: MathUtils.cpp  Utils.cpp
thrud/: CMakeLists.txt
thrud/include/: opencl_spir.h
thrud/include/thrud/: BranchExtraction.h  ControlDependenceAnalysis.h  DataTypes.h  DivergenceAnalysis.h  DivergentRegion.h  FeatureCollector.h  FeatureExtraction.h  Graph.h  ILPComputation.h  LoopFeatureExtraction.h  MLPComputation.h  MathUtils.h  NDRange.h  NDRangePoint.h  NDRangeSpace.h  OCLEnv.h  RegionBounds.h  SubscriptAnalysis.h  SymbolicExecution.h  ThreadCoarsening.h  Utils.h  Warp.h
thrud/lib/: BranchExtraction.cpp  CMakeLists.txt  Coarsening.cpp  ControlDependenceAnalysis.cpp  DivergenceAnalysis.cpp  DivergentRegion.cpp  FeatureCollector.cpp  FeatureExtraction.cpp  Graph.cpp  ILPComputation.cpp  LoopFeatureExtraction.cpp  MLPComputation.cpp  MathUtils.cpp  NDRange.cpp  NDRangePoint.cpp  NDRangeScaling.cpp  NDRangeSpace.cpp  OCLEnv.cpp  RegionBounds.cpp  RegionCoarsening.cpp  SubscriptAnalysis.cpp  SymbolicExecution.cpp  ThreadCoarsening.cpp  Utils.cpp  Warp.cpp
thrud/tests/coarsening/: runTests.py
thrud/tests/coarsening/kernels/: 2DConvolution.cl  2mm.cl  atax3.cl  bicg.cl  blackscholes.cl  bruno_examples.cl  dwtHaar1D.cl  memset.cl  mm.cl  mm2metersKernel.cl  mt.cl  mtLocal.cl  mvc0.cl  mvu0.cl  nbody_sim.cl  sad_kernel.cl  scanLargeArray.cl
thrud/tools/scripts/: dump_ir.sh  tc.sh
