set(COMMON_DIR "common")
set(OPENCL_DIR "OpenCL")
set(INCLUDE_DIR "include")
set(SRC_DIR "src")

set(COMMON_PATH ${POLYBENCH_TEST_PATH}/${COMMON_DIR})
set(COMMON_INCLUDE_PATH ${COMMON_PATH}/${INCLUDE_DIR})
set(COMMON_SRC_PATH ${COMMON_PATH}/${SRC_DIR})
set(OPENCL_PATH ${POLYBENCH_TEST_PATH}/${OPENCL_DIR})

add_subdirectory(OpenCL)
