add_subdirectory(${OPENCL_PATH}/2DCONV)
add_subdirectory(${OPENCL_PATH}/2MM)
add_subdirectory(${OPENCL_PATH}/3DCONV)
add_subdirectory(${OPENCL_PATH}/3MM)
add_subdirectory(${OPENCL_PATH}/ATAX)
add_subdirectory(${OPENCL_PATH}/BICG)
add_subdirectory(${OPENCL_PATH}/CORR)
add_subdirectory(${OPENCL_PATH}/COVAR)
add_subdirectory(${OPENCL_PATH}/FDTD-2D)
add_subdirectory(${OPENCL_PATH}/GEMM)
add_subdirectory(${OPENCL_PATH}/GESUMMV)
add_subdirectory(${OPENCL_PATH}/GRAMSCHM)
add_subdirectory(${OPENCL_PATH}/MVT)
add_subdirectory(${OPENCL_PATH}/SYR2K)
add_subdirectory(${OPENCL_PATH}/SYRK)
